fix errortext alignment on 1200px+

--- a/style.css
+++ b/style.css
@@ -861,7 +861,7 @@ footer {
 	}
 
 	.post-errortext {
-		margin-left: 15px;
+		margin-left: 10px;
 	}
  }
 
